State Estimation and Crawl Gait Implementation
Now the robot can perform a very slow crawl gait.
It can also track the position in the world coordinates using a sensor fusion between the legs odometry and the IMU sensor.

Future work:
- Optimization of the state estimation performance
- Cartesian Force Low-Level controller
- MPC Implementation in the support phase

--- a/src/custom_interfaces/CMakeLists.txt
+++ b/src/custom_interfaces/CMakeLists.txt
@@ -27,6 +27,8 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/Leds.msg"
   "msg/LegReadings.msg"
   "msg/LegCommands.msg"
+  "msg/LegStates.msg"
+  "msg/StateEstimation.msg"
 )
 ament_export_dependencies(rosidl_default_runtime)
 ament_package()
