Implement gpiod Library for GPIO Control on Raspberry Pi 5
Feature of this package:
- Integrated the gpiod library for GPIO management on the Raspberry Pi 5, addressing compatibility issues with conventional libraries that do not function with the new GPIO chip architecture.
- Utilized the /dev/gpiochip4 interface provided by Docker to map GPIO controls effectively.
- Implemented LED indicators to communicate the operational states of the robot clearly.
- Introduced asynchronous interrupt management, resulting in a significant reduction of CPU usage from 5% to less than 1%.
- Enhanced the robustness and responsiveness of the control system, enabling safe testing of complex control schemes and ensuring quick shutdown capabilities to prevent damage to the robot and surrounding personnel.

Note:: the development of this interface seems to be finished since it showed a correct fuctionality for more than 2 months of testing

--- a/src/control_interface_package/CMakeLists.txt
+++ b/src/control_interface_package/CMakeLists.txt
@@ -11,8 +11,8 @@ find_package(rclcpp REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(custom_interfaces REQUIRED)
 
-add_executable(button_reader src/control_interface.cpp)
-add_executable(led_state src/led_interface.cpp)
+add_executable(button_reader src/control_interface_2.cpp)
+add_executable(led_state src/led_interface_2.cpp)
 add_executable(led_test src/led_publisher.cpp)
 ament_target_dependencies(button_reader rclcpp std_msgs custom_interfaces)
 ament_target_dependencies(led_state rclcpp std_msgs custom_interfaces)
@@ -44,21 +44,26 @@ target_link_libraries(button_reader
   ${rclcpp_LIBRARIES}
   pigpiod_if2
   pthread
+  gpiod
+ -lgpiodcxx
 )
 target_link_libraries(led_state
   ${rclcpp_LIBRARIES}
   pigpiod_if2
   pthread
+  gpiod
 )
 
 target_link_libraries(led_state
   ${rclcpp_LIBRARIES}
   pigpiod_if2
   pthread
+  gpiod
 )
 target_link_libraries(led_test
   ${rclcpp_LIBRARIES}
   pigpiod_if2
   pthread
+  gpiod
 )
 ament_package()
